fix overflow in banner

--- a/styles/mainPage.module.css
+++ b/styles/mainPage.module.css
@@ -1,4 +1,6 @@
+.indexContainer {
 
+}
 .navContainer {
     padding-top: 25px;
     justify-content: center;
@@ -36,8 +38,6 @@
     filter: brightness(70%);
 }
 
-
-
 .shadowOverlay {
     filter: brightness(70%);
 }
@@ -49,6 +49,7 @@
     background-repeat: no-repeat;
     height: 400px;
     width: 100%;
+  overflow-x: hidden;
 }
 
 .logo {
@@ -86,6 +87,7 @@
     background-repeat: no-repeat;
     height: 400px;
     width: 100%;
+    overflow-x: hidden;
   }
 
   .centerAlignment {
